References docs updates.

--- a/References.html
+++ b/References.html
@@ -136,7 +136,10 @@
 
 			<h4>Quantum Computing for Computer Scientists (2008)</h4>
 			<p>
-				I’ll let you know when it finally arrives...
+				<a class="call-out" target="https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf" target="_blank">https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf</a> (This PDF includes the table of contents and preface only.)
+				<br>
+				I’ve just recieved the physical book, so just started reading it.
+				Fantastic so far.
 				<br>
 				<a href="https://www.cambridge.org/core/books/quantum-computing-for-computer-scientists/8AEA723BEE5CC9F5C03FDD4BA850C711" target="_blank">Entry on Cambridge University Press</a><br>
 				<a href="https://www.amazon.com/Quantum-Computing-Computer-Scientists-Yanofsky/dp/0521879965" target="_blank">Purchase from Amazon</a><br>
@@ -225,7 +228,22 @@
 				And I continue to update it ;) Let’s use the hashtag
 				<a href="https://twitter.com/hashtag/Qjs" target="_blank">#Qjs</a>.
 			</p>
-
+			<h4>Hi, I’m Stewart</h4>
+			<p>
+				<a class="call-out" href="http://stewartsmith.io" target="_blank">http://stewartsmith.io</a>
+				<br>
+				I do other things besides learn about quantum computing.
+				My homepage has some other projects and descriptions of
+				what I’ve been up to.
+				<br>
+				<a href="https://twitter.com/stew_rtsmith" target="_blank">Stewart on Twitter</a>
+				<br>
+				<a href="https://www.linkedin.com/in/stewart-smith-profile" target="_blank">Stewart on LinkedIn</a>
+				<br>
+				<a href="https://github.com/stewdio/" target="_blank">Stewart on GitHub</a>
+				<br>
+				<a href="https://medium.com/@stew_rtsmith" target="_blank">Stewart on Medium</a>
+			</p>
 
 
 			<hr>
