Are GitHub pages working again?

--- a/Q.html
+++ b/Q.html
@@ -69,8 +69,8 @@
 <pre><code>
 var circuit = Q`
 
-	<strong>H</strong>-<strong>X</strong>-<strong>C0</strong>-<strong>Y</strong>-<strong>M</strong>
-	<strong>I</strong>-<strong>I</strong>-<strong>C1</strong>-<strong>Y</strong>-<strong>M</strong>
+	<strong>H</strong>-<strong>C0</strong>-<strong>X</strong>
+	<strong>I</strong>-<strong>C1</strong>-<strong>X</strong>
 `
 </code></pre>
 			<p>
