References doc updates.

--- a/References.html
+++ b/References.html
@@ -71,14 +71,15 @@
 				<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
 				<br>
 				Dr. Gershon is the director of research strategy and growth initiatives at IBM.
-				Here she not only expertly explains quantum computing
+				In this twenty-minute video she expertly explains quantum computing
 				to five levels of understanding—personified by a child, 
-				a teen, undergrad, grad student, and a professional—but also
-				refers to an actual quantum computer apparatus that she’s brought with her to the dialogues. 
-				I have great respect for those who can take rather complex subjects 
-				and make them intuitive. 
-				It is incredibly difficult to do. 
-				Dr. Gershon makes it look easy.
+				teen, undergrad, grad student, and a field professional.
+				She also refers to an actual quantum computer apparatus 
+				that she’s brought with her to these dialogues. 
+				I have great respect for the art of explaining complex subjects
+				in a way that makes them intuitive
+				without losing the truth of the subject.
+				Dr. Gershon makes this tough task look easy.
 				<br>
 				<a href="https://www.linkedin.com/in/talia-gershon/" target="_blank">Dr. Talia Gershon on LinkedIn</a><br>
 				<a href="https://twitter.com/DrTaliaGershon" target="_blank">Dr. Talia Gershon on Twitter</a>
@@ -86,10 +87,9 @@
 
 
 			<h4>
-				“The Talk” by 
 				Scott Aaronson and
-				Zach Weinersmith
-				(2016)
+				Zach Weinersmith’s
+				“The Talk” (2016)
 			</h4>
 			<img src="Assets/References/the-talk.jpg">
 			<p>
@@ -99,6 +99,10 @@
 				director of the <a href="http://www.cs.utexas.edu/~qic/" target="_blank">Quantum Information Center</a>
 				at the University of Texas at Austin,
 				to produce this comic that is both humorous and informative. 
+				It also takes gentle swipes at pop-science’s 
+				mangled metaphors for explaining quantum phenomena.
+				“If you don’t talk to your kids about quantum computing
+				someone else will.”
 				<br>
 				<a href="https://www.scottaaronson.com/" target="_blank">Scott Aaronson’s website</a><br>
 				<a href="https://twitter.com/ZachWeiner" target="_blank">Zach Weinersmith on Twitter</a>
@@ -110,7 +114,8 @@
 			<hr>
 			<h3>Help—I am a programmer.</h3>	
 			<h4>
-				Andrew Helwer’s “Quantum computing for computer scientists”
+				Andrew Helwer’s 
+				“Quantum computing for computer scientists”
 				lecture for Microsoft Research (2018)
 			</h4>
 			<img src="Assets/References/andrew-helwer.jpg">
@@ -123,7 +128,7 @@
 				superposition,
 				and demonstrates an example of quantum computing’s 
 				exponential power over classical computing.
-				This is the video that got me started on building Q.js.
+				This is the video that inspired me to build Q.js.
 				I’ve watched it about 100 times, 
 				and each time I’m able to gleen a sliver of new insight. 
 				<br>
@@ -133,12 +138,22 @@
 			</p>
 			
 
-			<h4>Quantum Computing for Computer Scientists (2008)</h4>
+			<h4>
+				Noson Yanofsky and
+				Mirco Mannucci’s
+				“Quantum Computing for Computer Scientists” (2008)
+			</h4>
+			<img src="Assets/References/quantum-computing-for-computer-scientists.jpg">
 			<p>
+				<!--
 				<a class="call-out" target="https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf" target="_blank">https://pdfs.semanticscholar.org/6337/14a7b044fca5f8870ab3b2204929c99b5c72.pdf</a> (This linked PDF includes the table of contents and preface only.)
 				<br>
-				I’ve just recieved the physical book, so just started reading it.
-				Fantastic so far.
+				-->
+				Don’t have a degree in maths or physics—but know how to code?
+				This book is for you!
+				Noson and Mirco explain quantum computing
+				in terms you’ll grok.
+				I highly recommend it.
 				<br>
 				<a href="https://www.cambridge.org/core/books/quantum-computing-for-computer-scientists/8AEA723BEE5CC9F5C03FDD4BA850C711" target="_blank">Entry on Cambridge University Press</a><br>
 				<a href="https://books.google.com/books?id=U1chAwAAQBAJ" target="_blank">Entry on Google Books</a><br>
@@ -148,14 +163,16 @@
 			</p>
 
 
-			<h4>Quantum computation and quantum information (2000, 2010)</h4>
+			<h4>
+				Michael Nielsen and 
+				Isaac Chuang’s
+				“Quantum computation and quantum information” (2000, 2010)
+			</h4>
+			<img src="Assets/References/quantum-computing-and-quantum-information.jpg">
 			<p>
 				<a class="call-out" href="http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf" target="_blank">http://mmrc.amss.cas.cn/tlb/201702/W020170224608149940643.pdf</a>
 				<br>
-				This tome is credited to Michael Nielsen and 
-				Isaac Chuang—sometimes referred to as “Mike & Ike” for short. 
-				It is the must-have, foundational book for quantum computing.
-				Get this book.
+				This tome is a must-have, foundational book for quantum computing.
 				Beware: It is full of maths symbols. 
 				As such I’ve found it useful to breeze-read through some sections,
 				totally unconcerned about if I’m truly absorbing the material or not.
@@ -164,6 +181,9 @@
 				And yet again.
 				And so on.
 				By employing this unanxious repetition across days / moods / contexts it is almost by accident that the puzzle pieces begin to join and the picture comes in to focus.
+				Useless trivia:
+				It’s been nick-named “Mike & Ike” in honor
+				of the authors and the candy.
 				<br>
 				<a href="https://en.wikipedia.org/wiki/Quantum_Computation_and_Quantum_Information" target="_blank">Entry on Wikipedia</a><br>
 				<a href="https://books.google.com/books?id=-s4DEy7o-a0C" target="_blank">Entry on Google Books</a><br>
@@ -178,10 +198,11 @@
 			<hr>
 			<h3>Arrrgg. I need specifics.</h3>
 			<h4>
-				Playing with the Bloch Sphere (2019)
+				Gwilym Newton’s
+				“Playing with the Bloch Sphere”
+				blog post (2019)
 			</h4>
 			<p>
-
 				<a class="call-out" href="https://quantumcomputing.stackexchange.com/questions/4720/what-circuit-or-operation-corresponds-to-the-tensor-product" target="_blank">https://quantumcomputing.stackexchange.com/questions/4720/what-circuit-or-operation-corresponds-to-the-tensor-product</a>
 				<br>
 				Published just days after I began work on Q.js, 
@@ -190,10 +211,11 @@
 				<code><a href="Qubit.html#this.alpha">alpha</a></code>
 				and 
 				<code><a href="Qubit.html#this.beta">beta</a></code> 
-				properties in <a href="Qubit.html#.toBlochSphere">to phi and theta angles</a>!
+				properties in to <a href="Qubit.html#.toBlochSphere">phi and theta angles</a>!
 				If you’re building your own 
 				<a href="Qubit.html#Bloch_sphere">Bloch Sphere visualizer</a>
-				you’ll notice this is surprisingly difficult to find code examples of. This helped me a lot.
+				you’ll notice this is surprisingly difficult to find code examples of.
+				Gwilym’s description helped me out.
 				<br>
 				<a href="https://www.ibm.com/blogs/emerging-technology/author/gwilym-newton/" target="_blank">Gwilym Newton on IBM Blogs</a><br>
 				<a href="https://www.linkedin.com/in/gwilym-newton-91774659/" target="_blank">Gwilym Newton on LinkedIn</a><br>
@@ -222,41 +244,52 @@
 
 
 			<hr>
-			<h3>Q.js itself</h3>
-			<h4>GitHub repo</h4>
+			<h3>Q.js</h3>
+			<h4>Q.js on GitHub</h4>
 			<p>
 				<a class="call-out" href="https://github.com/stewdio/q.js" target="_blank">https://github.com/stewdio/q.js</a>
 				<br>
-				Q.js is open-source—and you can join in!
+				Q.js is open-source—and you can join right in!
 				Download the code. Contribute to it. Fork it.
-				Because the repo <em>is</em> the documentation / examples / source
+				Because the repo <em>is</em> the 
+				documentation / examples / concept primer / source code,
 				everything exists at this one location.
 			</p>
-			<h4>This documentation (GitHub pages)</h4>
+			<h4>Q.js documentation</h4>
 			<p>
 				<a class="call-out" href="https://stewdio.github.io/q.js" target="_blank">https://stewdio.github.io/q.js</a>
 				<br>
-				This very site that you are reading right now.
+				This very site that you are reading right now;
+				published as GitHub pages directly from the repo.
+				Note the very similar (yet different) URL to above.
 			</p>
-			<h4>Twitter thread</h4>
+			<h4>Q.js on Twitter</h4>
 			<p>
 				<a class="call-out" href="https://twitter.com/stew_rtsmith/status/1123415441915957250" target="_blank">https://twitter.com/stew_rtsmith/status/1123415441915957250</a>
 				<br>
-				It all started with a clumsy ASCII diagram of a 
-				<a href="https://en.wikipedia.org/wiki/Hadamard_matrix" target="_blank">Hadamard matrix</a>
-				on 30 April 2019. 
-				From there the thread highlights the twists and turns of Q.js over time.
-				And I continue to update it ;) Let’s use the hashtag
-				<a href="https://twitter.com/hashtag/Qjs" target="_blank">#Qjs</a>.
+				The original Q.js Twitter thread started 
+				in April 2019 with a clumsy ASCII diagram of a 
+				<a href="https://en.wikipedia.org/wiki/Hadamard_matrix" target="_blank">Hadamard matrix</a>. 
+				From there the thread documents the 
+				twists and turns of Q.js as it continues to evolve.
+				Let’s use the hashtag
+				<a href="https://twitter.com/hashtag/Qjs" target="_blank">#Qjs</a>, eh?
 			</p>
 			<h4>Hi, I’m Stewart</h4>
 			<p>
 				<a class="call-out" href="http://stewartsmith.io" target="_blank">http://stewartsmith.io</a>
 				<br>
-				I do other things besides learn about quantum computing.
-				My homepage has some other projects and descriptions of
-				what I’ve been up to.
+				I do other things besides attempt to teach myself quantum computing.
+				I’ve been educated as a graphic designer and fine artist,
+				but began coding at an early age.
+				I’ve worked for the big tech companies,
+				created artworks for museums and galleries around the world,
+				and have spent the last few years
+				creating tools for virtual reality. 
+				(That looks way more glamorous in writing than it is in reality.)
+				I live in Brooklyn NY with my family and will never move to San Francisco.
 				<br>
+				<a href="http://stewartsmith.io" target="_blank">Stewart Smith’s website</a><br>
 				<a href="https://twitter.com/stew_rtsmith" target="_blank">Stewart Smith on Twitter</a><br>
 				<a href="https://www.linkedin.com/in/stewart-smith-profile" target="_blank">Stewart Smith on LinkedIn</a><br>
 				<a href="https://github.com/stewdio/" target="_blank">Stewart Smith on GitHub</a><br>
