Minor References page updates.

--- a/References.html
+++ b/References.html
@@ -63,7 +63,14 @@
 
 
 			<h3>Help! I have no idea what quantum computing is.</h3>
-			
+			<p>
+				So you’ve heard the term 
+				“<a href="https://en.wikipedia.org/wiki/Quantum_computing" target="_blank">quantum computing</a>” 
+				but you’re not sure what it means.
+				Don’t be afraid! 
+				Start with these gentle introductions.
+			</p>
+
 
 			<h4>Dr. Talia Gershon explains quantum computing for WIRED (2018)</h4>
 			<img src="Assets/References/talia-gershon.jpg">
@@ -101,7 +108,7 @@
 				to produce this comic that is both humorous and informative. 
 				It also takes gentle swipes at pop-science’s 
 				mangled metaphors for explaining quantum phenomena.
-				“If you don’t talk to your kids about quantum computing
+				Remember, parents: “If you don’t talk to your kids about quantum computing
 				someone else will.”
 				<br>
 				<a href="https://www.scottaaronson.com/" target="_blank">Scott Aaronson’s website</a><br>
@@ -112,7 +119,12 @@
 
 
 			<hr>
-			<h3>Help—I am a programmer.</h3>	
+			<h3>Help—I am a programmer.</h3>
+			<p>
+				Ok, so you’re no stranger to variables, basic algebra, and 
+				banging your head against a keyboard.
+				It turns out that’s all you need to get started.
+			</p>	
 			<h4>
 				Andrew Helwer’s 
 				“Quantum computing for computer scientists”
@@ -286,8 +298,8 @@
 				created artworks for museums and galleries around the world,
 				and have spent the last few years
 				creating tools for virtual reality. 
-				(That looks way more glamorous in writing than it is in reality.)
-				I live in Brooklyn NY with my family and will never move to San Francisco.
+				(That looks way more glamorous in writing than it is in real life.)
+				I live in Brooklyn NY with my family and will never move to San Francisco ;)
 				<br>
 				<a href="http://stewartsmith.io" target="_blank">Stewart Smith’s website</a><br>
 				<a href="https://twitter.com/stew_rtsmith" target="_blank">Stewart Smith on Twitter</a><br>
