--- a/Circuit.html
+++ b/Circuit.html
@@ -61,15 +61,77 @@
 				When a musician reads a line of music 
 				she begins at moment zero on the left edge
 				and proceeds forward in time by reading to the right. 
-				Here we have an example of an ascending 
-				<a href="https://en.wikipedia.org/wiki/C_major" target="_blank">C Major scale</a>
-				written in the
-				<a href="https://en.wikipedia.org/wiki/Clef#Treble_clef" target="_blank">treble cleff</a>
-				(denoted by the ornate figure on the left edge)
-				in a 4/4 <a href="https://en.wikipedia.org/wiki/Time_signature" target="_blank">time signature</a>.
+				In this example we can see 
+				from the ornate figure on the left
+				that the pitch of the notes will be described by a
+				<a href="https://en.wikipedia.org/wiki/Clef" target="_blank">C clef</a>
+				and that each measure will span three beats
+				thanks to the 3/4
+				<a href="https://en.wikipedia.org/wiki/Time_signature" target="_blank">time signature</a> notation.
 			</p>
 			<br>
-			<img class="figure" src="Assets/c-major.jpg" width="467" height="174"><br>
+
+			
+
+
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 600 140" style="enable-background:new 0 0 600 140;" xml:space="preserve">
+	<g class="clef">
+		<rect x="90"  y="20"  class="st0" width="420" height="1" />
+		<rect x="90"  y="40"  class="st0" width="420" height="1" />
+		<rect x="90"  y="60"  class="st0" width="420" height="1" />
+		<rect x="90"  y="80"  class="st0" width="420" height="1" />
+		<rect x="90"  y="100" class="st0" width="420" height="1" />
+		<rect x="504" y="20"  class="st0" width="6"   height="81"/>
+		<rect x="498" y="20"  class="st0" width="2"   height="81"/>
+		<rect x="90"  y="20"  class="st0" width="2"   height="81"/>
+		<path class="st0" d="M186.1,62c0,0,0.2-1.4,0.8-1.7c0.6-0.2,0.9-0.2,0.9-0.2l10.8-0.2c0,0-3.7,7.5-20.6,26h14.6l0.2-3.5
+			c0,0,0-1.1-1.5-2.1l10.6-12.4l0.3,18.1h4.8v2h-4.9v5.4c0,0,0.3,4,4.9,3.6v2.9l-18.8,0.1v-2.3c0,0,5-0.8,4.7-4.1v-2.1
+			c0,0,0.3-3.2-3.5-3.3l-14.1,0.2c0,0-0.6-0.8,0-1.7C178.3,82.1,185.5,73.9,186.1,62z"/>
+		<path class="st0" d="M122.2,101h-12.1c0,0-0.1,0-0.1-0.1V20.1c0,0,0-0.1,0.1-0.1h12.1c0,0,0.1,0,0.1,0.1L122.2,101
+			C122.3,101,122.2,101,122.2,101z"/>
+		<path class="st0" d="M130.9,101h-3.3c0,0-0.1,0-0.1-0.1V20.1c0,0,0-0.1,0.1-0.1h3.3c0,0,0.1,0,0.1,0.1L130.9,101
+			C130.9,101,130.9,101,130.9,101z"/>
+		<path class="st0" d="M156.6,65.1c-3.8-3.1-9.4-4-13.6-1.4c-0.9,0.6-2,1.5-3,0.5c-0.5-0.5-0.7-1.1-1-1.7c-0.5-2.2,0-3.8,0-3.8
+			c0.2-0.6,0.5-1.3,1-1.7c1-1,2-0.1,3,0.5c4.2,2.5,9.9,1.6,13.6-1.4c8.7-7,8.3-21.7,1.5-30.1c-2.7-3.4-6.4-5.6-10.8-5.6
+			c-4.1,0.1-8.9,1.8-12.4,7.7c0,0-1.9,3.4-0.3,7.5c0.9,2.6,3.2,4.4,5.8,4.4c3.4,0,6.1-3.2,6.1-7.1c0-2.8-1.5-5.2-3.6-6.3
+			c1.9-0.9,4-1.2,6.1-0.9c1.6,0.2,3.3,0.4,4.3,2c2.6,4.1,3.2,9.8,2.9,14.8c-0.3,4.2-1.5,9.2-5.3,10.8c-0.2,0.1-0.4,0.1-0.6,0.2
+			c-3.9,1.3-8.9-0.3-9.7-5.4c-0.1-0.6-0.2-1.3-0.7-1.4c-0.3-0.1-0.6,0.2-0.8,0.5c-0.1,0.3-0.2,0.7-0.2,1.1c-0.2,2.2-0.7,4.5-2.1,6.1
+			c-0.8,1-1.8,1.5-3,1.5c-0.4,0-2.6-0.4-2.8,0.2c0,0,0,1.4,0,2.2c0,0.3,0,0.6,0,0.6v3.9c0,0,0,0.2,0,0.6c0,0.8,0,2.2,0,2.2
+			c0.2,0.5,2.4,0.2,2.8,0.2c1.2,0,2.2,0.5,3,1.5c1.4,1.6,2,3.9,2.1,6.1c0,0.4,0.1,0.8,0.2,1.1c0.1,0.3,0.5,0.6,0.8,0.5
+			c0.5-0.1,0.6-0.8,0.7-1.4c0.8-5.1,5.8-6.7,9.7-5.4c0.2,0.1,0.4,0.1,0.6,0.2c3.8,1.6,5,6.6,5.3,10.8c0.3,5-0.3,10.7-2.9,14.8
+			c-1,1.6-2.7,1.8-4.3,2c-2.1,0.3-4.2,0-6.1-0.9c2.1-1.1,3.6-3.5,3.6-6.3c0-3.9-2.7-7.1-6.1-7.1c-2.6,0-4.8,1.8-5.8,4.4
+			c-1.5,4.1,0.3,7.5,0.3,7.5c3.5,5.8,8.3,7.6,12.4,7.7c4.4,0.1,8.1-2.2,10.8-5.6C164.9,86.7,165.3,72.1,156.6,65.1z"/>
+		<path class="st0" d="M192.5,61c11,0,14.4-5,14.5-10.2c0.1-6.6-2.5-8.4-8.4-10.6c3.9-1.9,7.7-2.6,7.9-8.9
+			c0.1-5.5-3.4-10.4-12.6-10.3c-10.9,0.1-13.9,3.4-14.2,9.8c-0.2,3.7,2,5.8,4.8,6c2.1,0.2,4.3-1.1,5.2-3.1c1-2.2,0.7-4.7-1-5.2
+			c-3.6-1.1-3.3-4.4,4.4-4.2c2.9,0.1,5.2,3.4,5.1,7.1c-0.1,3.4-2.5,7.7-7.4,7.7h-3.7l-0.2,2.9c0,0,2.7,0,4.5,0c3.3,0,6.8,3,6.8,7.8
+			c0,4-3,7.7-6.3,7.6c-1.7,0-4.4-0.9-4.4-2.6c0-1.3,1.9-1.8,1.9-4.5c0-3.7-2.8-4.9-5.4-4.9c-2.7,0-5.1,2.5-5,6.6
+			C179.2,57.3,183.1,61,192.5,61z"/>
+	</g>
+	<g class="beat doh">
+		<path d="M258,24.5L258,24.5v65c0,0.3,0.2,0.5,0.5,0.5h1.2c0.3,0,0.5-0.2,0.5-0.5V29.8c3.3,1.7,9.4,1.4,14.2-1.2
+			c6.6-3.6,10.2-10.1,7.9-14.6c-2.3-4.5-9.5-5.3-16.1-1.7C260.7,15.2,258,20.3,258,24.5z"/>
+	</g>
+	<g class="beat ray">
+		<path d="M338,64.5L338,64.5v65c0,0.3,0.2,0.5,0.5,0.5h1.2c0.3,0,0.5-0.2,0.5-0.5V69.8c3.3,1.7,9.4,1.4,14.2-1.2
+			c6.6-3.6,10.2-10.1,7.9-14.6c-2.3-4.5-9.5-5.3-16.1-1.7C340.7,55.2,338,60.3,338,64.5z"/>
+		<path d="M338,24.5L338,24.5v65c0,0.3,0.2,0.5,0.5,0.5h1.2c0.3,0,0.5-0.2,0.5-0.5V29.8c3.3,1.7,9.4,1.4,14.2-1.2
+			c6.6-3.6,10.2-10.1,7.9-14.6c-2.3-4.5-9.5-5.3-16.1-1.7C340.7,15.2,338,20.3,338,24.5z"/>
+		<polygon points="351,86.8 327,99 327,93.2 351,81"/>
+		<polygon points="351,96.8 327,109 327,103.2 351,91"/>
+		<polygon points="351,106.8 327,119 327,113.2 351,101"/>
+	</g>
+	<g class="beat egon">
+		<path d="M418,64.5L418,64.5v65c0,0.3,0.2,0.5,0.5,0.5h1.2c0.3,0,0.5-0.2,0.5-0.5V69.8c3.3,1.7,9.4,1.4,14.2-1.2
+			c6.6-3.6,10.2-10.1,7.9-14.6c-2.3-4.5-9.5-5.3-16.1-1.7C420.7,55.2,418,60.3,418,64.5z"/>
+		<path d="M418,24.5L418,24.5v65c0,0.3,0.2,0.5,0.5,0.5h1.2c0.3,0,0.5-0.2,0.5-0.5V29.8c3.3,1.7,9.4,1.4,14.2-1.2
+			c6.6-3.6,10.2-10.1,7.9-14.6c-2.3-4.5-9.5-5.3-16.1-1.7C420.7,15.2,418,20.3,418,24.5z"/>
+	</g>
+</svg>
+
+
+
+
 			<br>
 			<p>
 				Similarly, quantum circuit diagrams are a series of moments in time,
