--- a/Circuit.html
+++ b/Circuit.html
@@ -140,7 +140,118 @@
 				Here we have a quantum circuit that is 3 moments long
 				and operates on just 2 quantum bits:
 			</p>
-			<div class="fox-diagram qjs-circuit-container"></div>
+
+
+
+
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 600 180" style="enable-background:new 0 0 600 180;" xml:space="preserve">
+	<g class="clef">
+		<path d="M398.6,29l0.9,0c0.3,0,0.6,0,0.9-0.1c0.3-0.1,0.5-0.2,0.7-0.4s0.4-0.4,0.5-0.6c0.1-0.2,0.2-0.5,0.3-0.8
+			c0-0.3,0-0.5,0-0.7s-0.1-0.4-0.3-0.6c-0.1-0.2-0.3-0.3-0.5-0.4c-0.2-0.1-0.4-0.1-0.7-0.2c-0.3,0-0.6,0-0.8,0.1s-0.5,0.2-0.6,0.4
+			c-0.2,0.2-0.3,0.4-0.5,0.6c-0.1,0.2-0.2,0.5-0.3,0.8l-1.3,0c0-0.5,0.2-0.9,0.4-1.2c0.2-0.4,0.5-0.7,0.8-0.9
+			c0.3-0.3,0.7-0.5,1.1-0.6c0.4-0.1,0.8-0.2,1.3-0.2c0.4,0,0.8,0.1,1.2,0.2c0.4,0.1,0.7,0.3,0.9,0.6c0.2,0.3,0.4,0.6,0.5,0.9
+			c0.1,0.4,0.2,0.8,0.1,1.2c0,0.3-0.1,0.6-0.2,0.8s-0.3,0.5-0.5,0.7c-0.2,0.2-0.4,0.4-0.6,0.5s-0.5,0.3-0.7,0.4
+			c0.2,0.1,0.5,0.2,0.6,0.4c0.2,0.2,0.3,0.4,0.4,0.6c0.1,0.2,0.2,0.4,0.2,0.7c0,0.2,0,0.5,0,0.8c0,0.5-0.2,0.9-0.4,1.3
+			c-0.2,0.4-0.5,0.7-0.8,1c-0.3,0.3-0.7,0.5-1.1,0.6c-0.4,0.1-0.9,0.2-1.4,0.2c-0.4,0-0.8-0.1-1.2-0.2s-0.7-0.3-0.9-0.6
+			c-0.3-0.3-0.5-0.6-0.6-0.9s-0.2-0.8-0.2-1.2l1.3,0c0,0.3,0,0.5,0.1,0.7c0.1,0.2,0.2,0.4,0.3,0.6c0.1,0.2,0.3,0.3,0.5,0.4
+			s0.5,0.1,0.7,0.1c0.3,0,0.6,0,0.9-0.1c0.3-0.1,0.5-0.2,0.7-0.4c0.2-0.2,0.4-0.4,0.5-0.7c0.1-0.3,0.2-0.5,0.2-0.9
+			c0-0.3,0-0.6-0.1-0.8s-0.2-0.4-0.3-0.6s-0.4-0.3-0.6-0.4s-0.5-0.1-0.8-0.1l-1,0L398.6,29z"/>
+		<rect x="250" y="130" width="180" height="1"/>
+		<rect x="250" y="70"  width="180" height="1"/>
+		<path d="M224.4,71.6c-0.1,0.7-0.3,1.4-0.5,2.1s-0.6,1.3-1,1.8s-1,0.9-1.6,1.2s-1.3,0.5-2.2,0.4c-0.8,0-1.4-0.2-2-0.5
+			s-0.9-0.8-1.2-1.3s-0.5-1.1-0.5-1.8s-0.1-1.3,0-2l0.5-3.4c0.1-0.7,0.3-1.4,0.5-2.1s0.6-1.3,1-1.8s1-0.9,1.6-1.2s1.3-0.5,2.2-0.4
+			c0.5,0,1,0.1,1.4,0.3s0.7,0.4,1,0.6s0.5,0.6,0.7,0.9s0.3,0.7,0.4,1.1s0.2,0.8,0.2,1.3s0,0.9-0.1,1.4L224.4,71.6z M222.1,69.5
+			l-4.1,2.8c0,0.3,0,0.6,0,0.9s0,0.6,0.1,0.9s0.2,0.5,0.4,0.7s0.5,0.3,0.8,0.3c0.4,0,0.8-0.1,1-0.3s0.5-0.4,0.7-0.7s0.3-0.6,0.4-1
+			s0.2-0.7,0.2-1L222.1,69.5z M218.3,70.3l4.1-2.8c0-0.3,0.1-0.6,0.1-0.9s0-0.6-0.1-0.9s-0.2-0.5-0.4-0.7s-0.5-0.3-0.8-0.3
+			c-0.4,0-0.8,0.1-1,0.2s-0.5,0.4-0.7,0.7s-0.3,0.6-0.4,1s-0.2,0.7-0.2,1L218.3,70.3z"/>
+		<path d="M224.4,131.6c-0.1,0.7-0.3,1.4-0.5,2.1s-0.6,1.3-1,1.8s-1,0.9-1.6,1.2s-1.3,0.5-2.2,0.4c-0.8,0-1.4-0.2-2-0.5
+			s-0.9-0.8-1.2-1.3s-0.5-1.1-0.5-1.8s-0.1-1.3,0-2l0.5-3.4c0.1-0.7,0.3-1.4,0.5-2.1s0.6-1.3,1-1.8s1-0.9,1.6-1.2s1.3-0.5,2.2-0.4
+			c0.5,0,1,0.1,1.4,0.3s0.7,0.4,1,0.6s0.5,0.6,0.7,0.9s0.3,0.7,0.4,1.1s0.2,0.8,0.2,1.3s0,0.9-0.1,1.4L224.4,131.6z M222.1,129.5
+			l-4.1,2.8c0,0.3,0,0.6,0,0.9s0,0.6,0.1,0.9s0.2,0.5,0.4,0.7s0.5,0.3,0.8,0.3c0.4,0,0.8-0.1,1-0.3s0.5-0.4,0.7-0.7s0.3-0.6,0.4-1
+			s0.2-0.7,0.2-1L222.1,129.5z M218.3,130.3l4.1-2.8c0-0.3,0.1-0.6,0.1-0.9s0-0.6-0.1-0.9s-0.2-0.5-0.4-0.7s-0.5-0.3-0.8-0.3
+			c-0.4,0-0.8,0.1-1,0.2s-0.5,0.4-0.7,0.7s-0.3,0.6-0.4,1s-0.2,0.7-0.2,1L218.3,130.3z"/>
+		<path d="M223.3,30.9c-0.1,0.5-0.2,1.1-0.4,1.6c-0.2,0.5-0.5,1-0.8,1.4c-0.3,0.4-0.7,0.7-1.2,0.9
+			c-0.5,0.2-1,0.3-1.6,0.3c-0.4,0-0.7-0.1-1-0.2c-0.3-0.1-0.6-0.3-0.8-0.5c-0.2-0.2-0.4-0.4-0.5-0.7s-0.2-0.6-0.3-0.9
+			c-0.1-0.3-0.1-0.6-0.1-1s0-0.7,0.1-1l0.4-2.5c0.1-0.4,0.1-0.7,0.2-1.1c0.1-0.4,0.2-0.7,0.4-1c0.2-0.3,0.3-0.6,0.6-0.9
+			s0.5-0.5,0.7-0.7c0.3-0.2,0.6-0.3,0.9-0.4s0.7-0.2,1.1-0.1c0.4,0,0.7,0.1,1,0.2c0.3,0.1,0.6,0.3,0.8,0.5c0.2,0.2,0.4,0.4,0.5,0.7
+			s0.2,0.6,0.3,0.9s0.1,0.6,0.1,1s0,0.7-0.1,1L223.3,30.9z M222.3,28.8l-4.5,3.1c0,0.3,0,0.5,0.1,0.8c0.1,0.2,0.1,0.5,0.3,0.7
+			c0.1,0.2,0.3,0.3,0.5,0.5c0.2,0.1,0.5,0.2,0.8,0.2c0.4,0,0.8-0.1,1.1-0.2c0.3-0.2,0.5-0.4,0.7-0.6c0.2-0.3,0.4-0.6,0.5-0.9
+			c0.1-0.3,0.2-0.7,0.3-1.1L222.3,28.8z M218,30.6l4.6-3.2c0-0.3,0-0.5-0.1-0.8s-0.1-0.5-0.3-0.7c-0.1-0.2-0.3-0.4-0.5-0.5
+			c-0.2-0.1-0.5-0.2-0.8-0.2c-0.4,0-0.8,0.1-1.1,0.2c-0.3,0.2-0.5,0.4-0.7,0.6c-0.2,0.3-0.4,0.6-0.5,0.9c-0.1,0.3-0.2,0.7-0.3,1.1
+			L218,30.6z"/>
+		<path d="M280.3,35H279l1.5-8.9l-2.9,1.1l0.2-1.3l4.1-1.5h0.1L280.3,35z"/>
+		<path d="M342.5,35h-6.8l0.2-1l3.9-3.8c0.2-0.2,0.4-0.4,0.6-0.6c0.2-0.2,0.4-0.5,0.6-0.7s0.4-0.5,0.5-0.8
+			c0.1-0.3,0.2-0.6,0.3-0.9c0-0.2,0-0.5,0-0.7c-0.1-0.2-0.1-0.4-0.3-0.6s-0.3-0.3-0.5-0.4c-0.2-0.1-0.4-0.2-0.7-0.2
+			c-0.3,0-0.7,0-0.9,0.1s-0.5,0.3-0.7,0.4c-0.2,0.2-0.4,0.4-0.5,0.7c-0.1,0.3-0.2,0.6-0.2,0.9l-1.3,0c0-0.5,0.2-0.9,0.4-1.3
+			c0.2-0.4,0.5-0.8,0.8-1s0.7-0.5,1.1-0.7c0.4-0.2,0.9-0.2,1.4-0.2c0.4,0,0.8,0.1,1.2,0.2c0.4,0.1,0.7,0.3,0.9,0.6
+			c0.3,0.3,0.4,0.6,0.6,0.9c0.1,0.4,0.2,0.7,0.1,1.2c0,0.4-0.1,0.7-0.3,1.1c-0.2,0.3-0.4,0.7-0.6,1c-0.2,0.3-0.5,0.6-0.8,0.9
+			c-0.3,0.3-0.5,0.5-0.8,0.8l-3.3,3.1h5.1L342.5,35z"/>
+		<path d="M141.5,66.9c0.9,0,1.6,0.3,2,1l0.2-0.8h1.2l-1.9,11h-1.3l0.7-3.8c-0.6,0.6-1.4,0.9-2.2,0.9
+			c-0.7,0-1.3-0.3-1.8-0.8s-0.7-1.3-0.7-2.2c0-0.6,0-1.2,0.2-1.9s0.4-1.3,0.8-1.8c0.3-0.5,0.7-0.9,1.2-1.1S140.9,66.9,141.5,66.9z
+			 M139.1,71.2l0,0.6c0,0.7,0.1,1.3,0.4,1.7c0.3,0.4,0.7,0.6,1.2,0.6c0.7,0,1.4-0.3,2-1.1l0.7-3.9c-0.3-0.7-0.8-1-1.6-1
+			c-0.7,0-1.2,0.2-1.7,0.8S139.3,70.1,139.1,71.2z"/>
+		<path d="M150.8,74.2c-0.6,0.6-1.4,0.9-2.4,0.9c-0.8,0-1.3-0.3-1.7-0.8s-0.5-1.2-0.4-2.1l0.8-5.1h1.3l-0.9,5.1
+			c0,0.2,0,0.4,0,0.6c0,0.4,0.1,0.6,0.3,0.8s0.4,0.3,0.8,0.3c0.9,0,1.7-0.4,2.2-1.1l1-5.8h1.3l-1.4,7.9h-1.3L150.8,74.2z"/>
+		<path d="M161.1,71.1c-0.1,0.8-0.3,1.5-0.7,2.2s-0.8,1.1-1.3,1.4s-1,0.5-1.6,0.4c-1,0-1.7-0.4-2.1-1.1l-0.3,0.9h-1.2
+			l2-11.2h1.3l-0.8,4.2c0.6-0.7,1.4-1,2.3-1c0.8,0,1.4,0.3,1.8,0.8s0.6,1.3,0.7,2.2c0,0.3,0,0.6,0,0.9L161.1,71.1z M159.8,70.3
+			c0-0.7-0.1-1.3-0.4-1.6s-0.6-0.6-1.2-0.6c-0.8,0-1.5,0.4-2.1,1.2l-0.6,3.4c0.3,0.8,0.8,1.2,1.6,1.2c0.5,0,1-0.1,1.4-0.5
+			c0.4-0.3,0.7-0.8,0.9-1.4C159.7,71.6,159.8,71,159.8,70.3z"/>
+		<path d="M163.5,75h-1.3l1.4-7.9h1.3L163.5,75z M164.6,64.2c0.2,0,0.4,0.1,0.6,0.2c0.1,0.1,0.2,0.3,0.2,0.6
+			c0,0.2-0.1,0.4-0.2,0.6c-0.1,0.1-0.3,0.2-0.6,0.2s-0.4-0.1-0.6-0.2s-0.2-0.3-0.2-0.6s0.1-0.4,0.2-0.6S164.4,64.2,164.6,64.2z"/>
+		<path d="M169.2,65.2l-0.3,1.9h1.4l-0.2,1h-1.4l-0.8,4.9c0,0.1,0,0.2,0,0.4c0,0.4,0.2,0.6,0.6,0.6c0.2,0,0.4,0,0.6-0.1
+			L169,75c-0.3,0.1-0.6,0.1-1,0.1c-0.5,0-0.9-0.2-1.2-0.6c-0.3-0.4-0.4-0.9-0.3-1.5l0.8-4.9H166l0.2-1h1.4l0.3-1.9H169.2z"/>
+		<path d="M181.7,70.9c-0.1,0.6-0.2,1.1-0.4,1.6s-0.4,1-0.8,1.4s-0.7,0.7-1.2,0.9c-0.5,0.2-1,0.3-1.6,0.3
+			c-0.6,0-1.1-0.1-1.5-0.4s-0.7-0.6-0.9-1c-0.2-0.4-0.3-0.8-0.4-1.3s-0.1-1,0-1.5l0.4-2.5c0.1-0.5,0.2-1.1,0.4-1.6s0.5-1,0.8-1.4
+			c0.3-0.4,0.7-0.7,1.2-0.9c0.5-0.2,1-0.3,1.6-0.3c0.4,0,0.7,0.1,1,0.2c0.3,0.1,0.6,0.3,0.8,0.5c0.2,0.2,0.4,0.4,0.5,0.7
+			s0.2,0.6,0.3,0.9s0.1,0.6,0.1,1s0,0.7,0,1L181.7,70.9z M179.9,69.4l-3.1,2.1c0,0.2,0,0.4,0,0.7c0,0.2,0,0.5,0.1,0.7
+			s0.2,0.4,0.3,0.5s0.4,0.2,0.6,0.2c0.3,0,0.6,0,0.8-0.2s0.4-0.3,0.5-0.5c0.1-0.2,0.2-0.5,0.3-0.7c0.1-0.3,0.1-0.5,0.2-0.8
+			L179.9,69.4z M177.1,70l3.1-2.1c0-0.2,0-0.4,0-0.7s0-0.5-0.1-0.7s-0.2-0.4-0.3-0.5s-0.4-0.2-0.6-0.2c-0.3,0-0.6,0-0.8,0.2
+			c-0.2,0.1-0.4,0.3-0.5,0.5s-0.2,0.5-0.3,0.7s-0.1,0.5-0.2,0.8L177.1,70z"/>
+		<path d="M141.5,126.9c0.9,0,1.6,0.3,2,1l0.2-0.8h1.2l-1.9,11h-1.3l0.7-3.8c-0.6,0.6-1.4,0.9-2.2,0.9
+			c-0.7,0-1.3-0.3-1.8-0.8s-0.7-1.3-0.7-2.2c0-0.6,0-1.2,0.2-1.9s0.4-1.3,0.8-1.8c0.3-0.5,0.7-0.9,1.2-1.1S140.9,126.9,141.5,126.9z
+			 M139.1,131.2l0,0.6c0,0.7,0.1,1.3,0.4,1.7c0.3,0.4,0.7,0.6,1.2,0.6c0.7,0,1.4-0.3,2-1.1l0.7-3.9c-0.3-0.7-0.8-1-1.6-1
+			c-0.7,0-1.2,0.2-1.7,0.8S139.3,130.1,139.1,131.2z"/>
+		<path d="M150.8,134.2c-0.6,0.6-1.4,0.9-2.4,0.9c-0.8,0-1.3-0.3-1.7-0.8s-0.5-1.2-0.4-2.1l0.8-5.1h1.3l-0.9,5.1
+			c0,0.2,0,0.4,0,0.6c0,0.4,0.1,0.6,0.3,0.8s0.4,0.3,0.8,0.3c0.9,0,1.7-0.4,2.2-1.1l1-5.8h1.3l-1.4,7.9h-1.3L150.8,134.2z"/>
+		<path d="M161.1,131.1c-0.1,0.8-0.3,1.5-0.7,2.2s-0.8,1.1-1.3,1.4s-1,0.5-1.6,0.4c-1,0-1.7-0.4-2.1-1.1l-0.3,0.9h-1.2
+			l2-11.2h1.3l-0.8,4.2c0.6-0.7,1.4-1,2.3-1c0.8,0,1.4,0.3,1.8,0.8s0.6,1.3,0.7,2.2c0,0.3,0,0.6,0,0.9L161.1,131.1z M159.8,130.3
+			c0-0.7-0.1-1.3-0.4-1.6s-0.6-0.6-1.2-0.6c-0.8,0-1.5,0.4-2.1,1.2l-0.6,3.4c0.3,0.8,0.8,1.2,1.6,1.2c0.5,0,1-0.1,1.4-0.5
+			c0.4-0.3,0.7-0.8,0.9-1.4C159.7,131.6,159.8,131,159.8,130.3z"/>
+		<path d="M163.5,135h-1.3l1.4-7.9h1.3L163.5,135z M164.6,124.2c0.2,0,0.4,0.1,0.6,0.2c0.1,0.1,0.2,0.3,0.2,0.6
+			c0,0.2-0.1,0.4-0.2,0.6c-0.1,0.1-0.3,0.2-0.6,0.2s-0.4-0.1-0.6-0.2s-0.2-0.3-0.2-0.6s0.1-0.4,0.2-0.6S164.4,124.2,164.6,124.2z"/>
+		<path d="M169.2,125.2l-0.3,1.9h1.4l-0.2,1h-1.4l-0.8,4.9c0,0.1,0,0.2,0,0.4c0,0.4,0.2,0.6,0.6,0.6
+			c0.2,0,0.4,0,0.6-0.1L169,135c-0.3,0.1-0.6,0.1-1,0.1c-0.5,0-0.9-0.2-1.2-0.6c-0.3-0.4-0.4-0.9-0.3-1.5l0.8-4.9H166l0.2-1h1.4
+			l0.3-1.9H169.2z"/>
+		<path d="M179.1,135h-2l1.4-8.1l-2.8,1l0.3-1.8l4.7-1.6h0.1L179.1,135z"/>
+		<polygon points="229.9,80.5 228.1,79.5 233.9,69.9 230.1,60.4 231.9,59.6 236.1,70.1 	"/>
+		<polygon points="229.9,140.5 228.1,139.5 233.9,129.9 230.1,120.4 231.9,119.6 236.1,130.1 	"/>
+		<circle cx="280" cy="130" r="5"/>
+	</g>
+	<g class="beat doh">
+		<rect x="260" y="50" width="40" height="40"/>
+	</g>
+	<g class="beat ray">
+		<circle cx="340" cy="70" r="5"/>
+		<circle cx="340" cy="130" r="15"/>
+		<rect x="339" y="70" width="2" height="60"/>
+	</g>
+	<g class="beat egon">
+		<rect x="380" y="110" width="40" height="40"/>
+		<rect x="380" y="50" width="40" height="40"/>
+	</g>
+	<g class="clef label">
+		<path d="M284.7,77h-3.3l1-5.9h-4.9l-1,5.9h-3.3l2.5-14.2h3.3l-1,5.6h4.9l1-5.6h3.3L284.7,77z"/>
+		<path d="M400.4,127.5l3-4.7h4l-5.1,7.2l2.8,7h-3.7l-1.6-4.8l-3.1,4.8h-4l5.2-7.3l-2.7-6.9h3.7L400.4,127.5z"/>
+		<path d="M400.4,67.5l3-4.7h4l-5.1,7.2l2.8,7h-3.7l-1.6-4.8l-3.1,4.8h-4l5.2-7.3l-2.7-6.9h3.7L400.4,67.5z"/>
+		<rect x="339" y="123" width="2" height="14"/>
+		<rect x="333" y="129" width="14" height="2"/>
+	</g>
+</svg>
+
+
+
+			<br>
 			<p>
 				Let’s read it from left to right, 
 				observing what happens at each passing moment.
