Constructor arguments descriptions.

--- a/Circuit.html
+++ b/Circuit.html
@@ -660,6 +660,9 @@ q5  |0⟩───○──┤ X ├───○───┤ M │
 			<hr>
 			<h3>Constructor</h3>
 			<p>
+				<span class="constructor">Circuit</span>
+				<code class="value-type">Function([ bandwidth: Number [, timewidth: Number ]]) => <a href="Q.html">Q</a>.Circuit</code>
+				<br>
 				Description TK.
 			</p>
 			<ul class="properties">
