--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -365,6 +365,9 @@ i.<a href="#.prototype.power">power</a>( 2 ).<a href="#.prototype.toText">toText
 			<hr>
 			<h3 id="Constructor">Constructor</h3>
 			<p>
+				<span class="constructor">ComplexNumber</span>
+				<code class="value-type">Function([ real: Number or <a href="Q.html">Q</a>.ComplexNumber ][, imaginary: Number ]]) => <a href="Q.html">Q</a>.ComplexNumber</code>
+				<br>
 				Expects zero to two arguments. 
 				If the first argument is a <code>ComplexNumber</code> 
 				then that value is cloned and any remaining arguments are ignored.
