--- a/Gate.html
+++ b/Gate.html
@@ -69,6 +69,9 @@
 			<hr>
 			<h3 id="Constructor">Constructor</h3>
 			<p>
+				<span class="constructor">Gate</span>
+				<code class="value-type">Function( params: Object ) => <a href="Q.html">Q</a>.Gate</code>
+				<br>
 				Expects an object containing optional properties, 
 				such as an “operation” <code>Function</code> to be invoked by the <code><a href="#this.applyTo">applyTo</a> method</code>,
 				a single-character “label” <code>String</code>
