--- a/Matrix.html
+++ b/Matrix.html
@@ -164,6 +164,9 @@
 			<hr>
 			<h3 id="Constructor">Constructor</h3>
 			<p>
+				<span class="constructor">Matrix</span>
+				<code class="value-type">Function([ size: Number ] or [ width: Number, height: Number ] or [ rows: arguments ]) => <a href="Q.html">Q</a>.Matrix</code>
+				<br>
 				The <code>Matrix</code> class creates and operates on matrices of arbitrary dimensions. 
 				This is in contrast to some popular graphics libraries
 				which optimize for specific sizes of matrices—with corresponding class names like
