--- a/Qubit.html
+++ b/Qubit.html
@@ -481,7 +481,11 @@
 			<h3>Constructor</h3>
 			<p>
 				<span class="constructor">Qubit</span>
-				<code class="value-type">Function([ <a href="Q.html">Q</a>.Matrix* ][ alpha, beta [, label [, name ]]]) => <a href="Q.html">Q</a>.Qubit</code>
+				<code class="value-type">Function([ <a href="Q.html">Q</a>.Matrix* ][ 
+					alpha: Number or <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>, 
+					beta: Number or <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a> [, 
+					label: String [, name: String ]]]) => <a href="Q.html">Q</a>.Qubit</code>
+				<br>
 				<code>Qubit</code>
 				extends <code><a href="Q.html">Q</a>.<a href="Matrix.html">Matrix</a></code>
 				and therefore inherits its 
